--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-scripts": "1.1.4",
-    "three": "0.94.0"
+    "three": "0.94.0",
+    "three-orbit-controls": "82.1.0"
   },
   "devDependencies": {},
   "scripts": {
