--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "3.0.2",
     "@material-ui/icons": "3.0.1",
+    "hammerjs": "2.0.8",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-scripts": "1.1.4",
